--- a/.vscode/HTML/about.html
+++ b/.vscode/HTML/about.html
@@ -157,6 +157,6 @@
     <div class="parents">
           <div class=" bg-breadcrumb" style="padding-bottom:500px;background-position:bottom!important;background-image : url(//theobroma.in/cdn/shop/files/aboutpage-header.jpg?v=1615444228 )"> <div class="container container-v2"> <div class="title-page"><h1 class="title heading" style="font-family: 'Overlock'!important;" ></h1></div> </div> </div>
     </div>
-    
+    <div class=""></div>
 </body>
 </html>
