--- a/khushi/marqeeu.html
+++ b/khushi/marqeeu.html
@@ -1,18 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<link href ="css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="main">
-        <marquee  bgcolo="red" direction="right-left" >
-        <div class="div1">
-            Hello world
-        </div>
-
-        </marquee>
-    </div>
+<h5>Komal Yadav</h5>
+<div class="container">
+<div class ="row">
+<div class = "col">
+<div class = "card">
+<img src ="img1.jpeg" class ="card-img-top">
+<div class = "card-body text-center">
+<p class = "card-title">product 1</p>
+<p class = "card-text">1000 RS</p>
+<a href = "#" class = "btn btn-info">Add to cart</a>
+</div>
+</div>
+</div>
+<div class = "col">
+<div class = "card">
+<img src ="img1.jpeg" class ="card-img-top">
+<div class = "card-body text-center">
+<p class = "card-title">product 1</p>
+<p class = "card-text">1000 RS</p>
+<a href = "#" class = "btn btn-info">Add to cart</a>
+</div>
+</div>
+</div>
+<div class = "col">
+<div class = "card">
+<img src ="img1.jpeg" class ="card-img-top">
+<div class = "card-body text-center">
+<p class = "card-title">product 1</p>
+<p class = "card-text">1000 RS</p>
+<a href = "#" class = "btn btn-info">Add to cart</a>
+</div>
+</div>
+</div>
+<div class = "col">
+<div class = "card">
+<img src ="img1.jpeg" class ="card-img-top">
+<div class = "card-body text-center">
+<p class = "card-title">product 1</p>
+<p class = "card-text">1000 RS</p>
+<a href = "#" class = "btn btn-info">Add to cart</a>
+</div>
+</div>
+</div>
+<div class = "col">
+<div class = "card">
+<img src ="img1.jpeg" class ="card-img-top">
+<div class = "card-body text-center">
+<p class = "card-title">product 1</p>
+<p class = "card-text">1000 RS</p>
+<a href = "#" class = "btn btn-info">Add to cart</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<script src ="js/bootstrap.bundle.min.js"></script>
 </body>
-</html> 
+</html>
