--- a/index.html
+++ b/index.html
@@ -1,38 +1,71 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        
+.slider{
+  overflow: hidden;
+}
+.slider figure{
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  animation: 20s slider infinite;
+}
+.slider figure img{
+  float: left;
+  width: 20%;
+}
+
+@keyframes slider{
+  0%{
+    left: 0;
+  }
+  20%{
+    left: 0;
+  }
+  25%{
+    left: -100%;
+  }
+  45%{
+    left: -100%;
+  }
+  50%{
+    left: -200%;
+  }
+  70%{
+    left: -200%;
+  }
+  75%{
+    left: -300%;
+  }
+ 95%{
+  left: -300%;
+ }
+ 100%{
+  left: -400%;
+ }
+}
+
+    </style>
 </head>
 <body>
-    <pre>
-    <p>
-    <h1><MARK>STUDENT INFORMATION</MARK></h1>
-    <ol>
-        <li> student_name</li>
-        <li>student_id</li>
-        <li>student_phoneno</li>
-        <li>student_rollno</li>
-    </ol>
-    <q>
-        <p aling="rihgt">
-        a person who helps student to acquire knowlodge<br>
-        competeence or virtue the precticle of teaching
-        <br>
-        </p>
-    </q>
-    <var>
-        (a+b)
-        (a+b+c)
-        a=d*g+h
-    </var>
-    <img src="../0868_PF_Summer25-Site_MemorialDay_SidebySide_Image_v2_Mobile.webp" class="img_of_coffee" width="200px" height="200px" border="1px solid black" , >
-</p>
+
+    <div class="slider">
+    <figure>
+        <img src="./images/11.jpg">
+        <img src="./images/1.png">
+        <img src="./images/11.jpg">
+        <img src="./images/13.jpeg">
+        <img src="./images/21.webp">
+    </figure>
+</div>
 
 
 </body>
-    
-
 </html>
