--- a/wibside/project_hospital/index.html
+++ b/wibside/project_hospital/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+    <div class="block">
     <nav>
         <div class="parents">
             <!---
@@ -121,6 +123,8 @@
         <div class="child_8">
             <img src="./images/img4.jpg" class="img-7">
         </div>
+    </div>
+
     </div>
     <hr class="logHr"/>
     <div class="parents4">
