--- a/Example/dummy.html
+++ b/Example/dummy.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body onload="Apicall()">
+    <div id="info"></div>
 </body>
+<script src="../Example/api/dummy.js"></script>
 </html>
