--- a/Example/dummy.html
+++ b/Example/dummy.html
@@ -4,6 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+ 
+         .imgContainer{
+            width: 500px;
+            height: 450px;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+
+        .slider{
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .slider figure{
+            display: flex;
+            width: 500%; /* 5 images */
+            margin: 0;
+            padding: 0;
+            animation: slider 6s ease-in-out infinite;
+            animation-play-state: paused;
+        }
+
+        .slider:hover figure {
+            animation-play-state: running;
+        }
+
+        .slider figure img{
+            width: 20%;
+            height: 100%;
+            object-fit:cover;
+        }
+
+        @keyframes slider {
+            0% { margin-left: 0; }
+            20% { margin-left: -100%; }
+            40% { margin-left: -200%; }
+            60% { margin-left: -300%; }
+            80% { margin-left: -400%; }
+            100% { margin-left: 0; }
+        }
+
+        #info{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .title_head{
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .price{
+            color: green;
+            font-size: 18px;
+        }
+
+
+    </style>
 </head>
 <body onload="Apicall()">
     <div id="info"></div>
