--- a/Example/dummy.html
+++ b/Example/dummy.html
@@ -36,7 +36,7 @@
         .slider figure img{
             width: 20%;
             height: 100%;
-            object-fit:cover;
+            object-fit:fill;
         }
 
         @keyframes slider {
