--- a/Example/xyz.html
+++ b/Example/xyz.html
@@ -28,7 +28,7 @@
   gap: 10px;
   overflow-x: auto;
   max-width: 100%;
-  scroll-behavior: smooth;   /* ⭐ smooth scroll */
+  scroll-behavior: smooth;
 }
 
 .imgs-container img {
@@ -81,7 +81,6 @@ const appendImg = (val) => {
     });
 };
 
-// ⭐ SCROLL LOGIC
 const imgContainer = document.querySelector(".imgs-container");
 const left = document.getElementById("left");
 const right = document.getElementById("right");
