--- a/Example/dummy.html
+++ b/Example/dummy.html
@@ -5,36 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
-
-.imgContainer{
-    width: 25em;
-    height: 20em; /* fix typo */
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-}
-
-.slider{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-.slider figure{
-    display: flex;
-    width: 500%; /* 5 images */
-    margin: 0;
-    padding: 0;
-    transition: margin-left 1.1s ease-in-out; /* pehle 0.5s tha, ab slow */
-}
-
-
-.slider figure img{
-    width: 20%; /* 100% / 5 images */
-    height: 100%;
-    object-fit: fill;
-}
-
+  .imgContainer {
+      width: 25em;
+      height: 20em;
+      overflow: hidden;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      position: relative;
+    }
+    .slider {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    .slider figure {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      transition: transform 0.5s ease-in-out;
+    }
+    .slider figure img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+    .dots {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 5px;
+    }
+    .dot {
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.7);
+      cursor: pointer;
+    }
+    .dot.active {
+      background: rgba(255,255,255,1);
+    }
+    .card {
+      margin-bottom: 2em;
+    }
 </style>
 </head>
 <body onload="Apicall()">
