--- a/Example/xyz.html
+++ b/Example/xyz.html
@@ -3,94 +3,94 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>Smooth Auto Slide Gallery</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.css">
-
 <style>
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.container {
-  width:75%;
-  height: 100vh;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  padding: 20px;
-}
-
-.imgs-container {
-  display: flex;
-  scrollbar-width: none;
-  gap: 10px;
-  overflow-x: auto;
-  max-width: 100%;
-  scroll-behavior: smooth;
-}
-
-.imgs-container img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  flex-shrink: 0;
-}
-
-.bi {
-  font-size: 36px;
-  cursor: pointer;
-  user-select: none;
-}
+  * { margin:0; padding:0; box-sizing:border-box; }
+  .container {
+    width: 75%; height: 100vh; margin:auto;
+    display:flex; align-items:center; gap:16px; padding:20px;
+  }
+  .imgs-container {
+    display:flex; gap:10px; overflow:hidden;
+  }
+  .imgs-container img {
+    width:150px; height:150px; object-fit:cover; flex-shrink:0; border-radius:8px;
+  }
+  .bi { font-size:36px; cursor:pointer; user-select:none; }
 </style>
 </head>
 <body>
-
 <div class="container">
-    <i class="bi bi-chevron-left" id="left"></i>
-    <div class="imgs-container"></div>
-    <i class="bi bi-chevron-right" id="right"></i>
+  <i class="bi bi-chevron-left" id="left"></i>
+  <div class="imgs-container" id="imgsContainer"></div>
+  <i class="bi bi-chevron-right" id="right"></i>
 </div>
 
-</body>
-
 <script>
-let api = "https://picsum.photos/v2/list?page=1&limit=15";
+const imgContainer = document.getElementById("imgsContainer");
+const left = document.getElementById("left");
+const right = document.getElementById("right");
+const api = "https://picsum.photos/v2/list?page=1&limit=10";
+let scrollAmount = 160; // width + gap
+let scrollInterval;
 
+// Fetch images and initialize
 const fetchImg = async () => {
-    try {
-        let res = await fetch(api);
-        let data = await res.json();
-        appendImg(data);
-    } catch (error) {
-        console.log(error);
-    }
+  try {
+    let res = await fetch(api);
+    let data = await res.json();
+    appendImg(data);
+    startAutoScroll();
+  } catch(e){ console.log(e); }
 };
 fetchImg();
 
-const appendImg = (val) => {
+function appendImg(val){
+  val.forEach(el=>{
+    const img = document.createElement("img");
+    img.src = el.download_url;
+    imgContainer.append(img);
+  });
+  // Duplicate all images for seamless looping
+  val.forEach(el=>{
+    const img = document.createElement("img");
+    img.src = el.download_url;
+    imgContainer.append(img);
+  });
+}
 
-    // console.log(val)
-    let imgContainer = document.querySelector(".imgs-container");
+// Arrow buttons
+right.addEventListener("click", ()=> scrollByAmount(scrollAmount));
+left.addEventListener("click", ()=> scrollByAmount(-scrollAmount));
 
-    val.forEach((el) => {
-        let img = document.createElement("img");
-        img.src = el.download_url;
-        imgContainer.append(img);
-    });
-};
+function scrollByAmount(amount){
+  imgContainer.scrollBy({ left: amount, behavior: "smooth" });
+  setTimeout(seamlessCheck, 300); // check after smooth scroll
+}
 
-const imgContainer = document.querySelector(".imgs-container");
-const left = document.getElementById("left");
-const right = document.getElementById("right");
+// Auto-scroll one image at a time
+function startAutoScroll(){
+  scrollInterval = setInterval(()=>{
+    imgContainer.scrollBy({ left: scrollAmount, behavior: "smooth" });
+    setTimeout(seamlessCheck, 300);
+  }, 2000);
+}
 
-right.addEventListener("click", () => {
-    imgContainer.scrollLeft += 160;  // 150px image + 10px gap
-});
+// Seamless loop adjustment
+function seamlessCheck(){
+  const scrollWidth = imgContainer.scrollWidth / 2; // only original images
+  if(imgContainer.scrollLeft >= scrollWidth){
+    imgContainer.scrollLeft -= scrollWidth;
+  }
+  if(imgContainer.scrollLeft < 0){
+    imgContainer.scrollLeft += scrollWidth;
+  }
+}
 
-left.addEventListener("click", () => {
-    imgContainer.scrollLeft -= 160;
-});
+// Pause on hover
+imgContainer.addEventListener("mouseenter", ()=> clearInterval(scrollInterval));
+imgContainer.addEventListener("mouseleave", ()=> startAutoScroll());
 </script>
+</body>
 </html>
