--- a/.vscode/HTML/Curdopreation.html
+++ b/.vscode/HTML/Curdopreation.html
@@ -51,12 +51,15 @@
         <h1>User Info Form</h1>
 
         <form onsubmit="formFunction(event)">
-            <input type="text" id="userName" placeholder="Enter You Name"
-                required>
-            <input type="email" id="userEmail" placeholder="Enter Your Email"
-                required>
-            <input type="password" id="userPass"placeholder="Enter Your Password" required>
-            <input type="submit" class="submit">
+            
+        <input type="text" id="userName" placeholder="Enter You Name"required>
+
+        <input type="email" id="userEmail" placeholder="Enter Your Email"required>
+
+        <input type="password" id="userPass"placeholder="Enter Your Password" required>
+
+         <input type="submit" class="submit">
+
         </form>
         
         <section id="infoTable"></section>
