--- a/wdf/img_G.html
+++ b/wdf/img_G.html
@@ -32,8 +32,10 @@
       transition: 0.3s;
     }
     .thumbs img:hover {
+      width: 200px;
       border: 2px solid blue;
     }
+  
   </style>
 </head>
 <body>
