--- a/.vscode/HTML/Card.html
+++ b/.vscode/HTML/Card.html
@@ -7,7 +7,7 @@
 </head>
 <body onload="ApiCall()">
  
- <!-- <div id="info"></div> -->
+ <div id="info"></div>
 </body>
 <script src="../JavaScript/Hosting/Card.js"></script>
 </html>
