--- a/.vscode/HTML/about.html
+++ b/.vscode/HTML/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,4 +17,4 @@
 <body>
     <input type="text" value="Serching.." class="Serching">
 </body>
-</html>
+</html> -->
