--- a/task_perform/Linear-gradient.html
+++ b/task_perform/Linear-gradient.html
@@ -7,8 +7,37 @@
     <link rel="stylesheet" href="../css/Linear-gradient.css">
 </head>
 <body>
-    <div class="gradients_logo">
-    <img src="https://www.svgrepo.com/show/446869/ford.svg">
-    </div>
+   <!--=== section 03 ===-->
+
+    <section class="section03">
+      <div class="detail_1">
+        <img src="./Utils/1-home-Image Jan 25, 2026, 02_34_02 PM.png" alt="image">
+        <div class="para">
+          <h1>Whimsical Moments in <span>Modern Living</span></h1>
+          <p>
+            This image captures a joyful moment between a man and a woman in a spacious, multi-level furniture showroom.
+            The couple is the central focus, shown playfully falling back or lounging onto a large, dark grey sectional
+            sofa. The woman, dressed in a striped cardigan and jeans, has her arms spread wide and a look of pure
+            excitement on her face, while the man, in a grey sweater and tan trousers, laughs along as they hold hands.
+            Their dynamic poses and genuine expressions of happiness suggest they are having fun while shopping for their
+            home.
+          </p>
+        </div>
+      </div>
+
+      <div class="detail_1 detail_2">
+        <div class="para para_2">
+          <h1>A Collaborative <span>Home Design Experience</span></h1>
+          <p>
+            This image captures a joyful moment between a man and a woman in a spacious, multi-level furniture showroom.
+            The couple is the central focus, shown playfully falling back or lounging onto a large, dark grey sectional
+            sofa. The woman, dressed in a striped cardigan and jeans, has her arms spread wide and a look of pure
+            excitement on her face, while the man, in a grey sweater and tan trousers, laughs along as they hold hands.
+            Their dynamic poses and genuine expressions of happiness suggest they are having fun while shopping for their
+            home.
+          </p>
+        </div>
+      <img src="./Utils/2-home-image.webp" alt="image">
+</div>
 </body>
 </html>
