--- a/task_perform/Linear-gradient.html
+++ b/task_perform/Linear-gradient.html
@@ -6,10 +6,128 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/Linear-gradient.css">
 </head>
+<style>
+    /* === section 03 ===  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.section03 {
+  width: 100%;
+  height: auto;
+}
+
+.detail_1 {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5rem 0 5rem 0;
+  /* background-color: var(--gray); */
+}
+
+.detail_1 img {
+  width: 45%;
+  box-shadow: 0px 0px 6px 3px;
+  animation: detail_1img linear;
+  animation-timeline: view(0);
+  animation-range: entry 0 cover 40%;
+}
+
+.detail_1 .para {
+  width: 45%;
+  text-align: center;
+  line-height: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: detail_1para linear;
+  animation-timeline: view(0);
+  animation-range: entry 0 cover 40%;
+}
+
+.detail_1 .para h1 {
+  margin-bottom: 2rem;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.473);
+}
+
+.detail_1 .para h1 span {
+  color: var(--golden-hour);
+  margin-left: 15px;
+  font-family: mv boli;
+  font-size: 38px;
+  font-weight: bold;
+}
+
+.detail_1 .para p {
+  font-size: 17px;
+}
+
+@keyframes detail_1img {
+  from {
+    opacity: 0;
+    transform: translatex(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translatex(0px);
+  }
+}
+
+@keyframes detail_1para {
+  from {
+    opacity: 0;
+    transform: translatex(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translatex(0px);
+  }
+}
+
+.detail_2 .para {
+  animation: detail_1img linear;
+  animation-timeline: view(0);
+  animation-range: entry 0 cover 40%;
+}
+
+.detail_2 img {
+  animation: detail_1para linear;
+  animation-timeline: view(0);
+  animation-range: entry 0 cover 40%;
+  border: 2px solid red;
+}
+
+.p1{
+margin: 50px 50px;
+line-height:35px;
+word-spacing:10px;
+}
+</style>
+
 <body>
    <!--=== section 03 ===-->
+     <div class="p1">
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, veritatis voluptate possimus, non ab sapiente veniam itaque at architecto unde expedita asperiores repudiandae esse dolores quam exercitationem inventore ipsum ipsam.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore modi laboriosam neque, iusto vitae suscipit sapiente officia dolorem aliquam accusantium eos facilis consequatur porro, reiciendis laborum rem distinctio cupiditate.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, veniam fugiat! Dolores facere possimus quo illum eius pariatur dolore soluta eaque consequatur velit quas, molestias quibusdam unde ad non quasi?
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat odio animi nesciunt quas doloribus praesentium fugit mollitia quis possimus consequatur voluptatum quos facere, ea similique facilis impedit iure architecto reiciendis!
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsa, provident atque, aliquam obcaecati accusantium et accusamus odit quasi ullam iure a nam facere, non amet necessitatibus nemo incidunt nostrum.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quis adipisci eveniet soluta omnis consequuntur, atque asperiores dignissimos odio? Aspernatur itaque quibusdam excepturi placeat reiciendis harum eveniet repellendus odit consectetur?
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quis animi cumque dolor magnam aspernatur veniam laboriosam recusandae quas, earum fugit alias assumenda architecto hic explicabo ab, nisi obcaecati. Velit.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis labore consectetur beatae quasi debitis ex excepturi nihil odio, nobis fugiat repellat necessitatibus velit? Labore laboriosam aspernatur qui eveniet eaque? Deserunt!
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta temporibus corrupti ea recusandae, ratione odio quae facere! Ab repudiandae aliquid voluptatibus, maxime minima ipsa! Ad nihil iste ipsa ut saepe!
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae ducimus asperiores iure? Quae, omnis a. Neque tempore repellendus harum? Labore nisi, tempora soluta accusamus eius et suscipit dicta odio!
+
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dicta voluptates commodi quo modi qui ipsam, libero obcaecati alias aperiam minima cumque velit veniam id labore perferendis quae voluptas dolores!
+
+     </div>
 
     <section class="section03">
+
       <div class="detail_1">
         <img src="./Utils/1-home-Image Jan 25, 2026, 02_34_02 PM.png" alt="image">
         <div class="para">
@@ -39,5 +157,7 @@
         </div>
       <img src="./Utils/2-home-image.webp" alt="image">
 </div>
+</section>
+
 </body>
 </html>
