--- a/khushi/animation3.html
+++ b/khushi/animation3.html
@@ -11,6 +11,8 @@
     <div class="parents">
         <div class="parents_1">
             <div class="child_1"></div>
+
+            <div class="i"></div>
             <div class="child_2"></div>
         </div>
     </div>
